--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;500;700&family=Open+Sans:wght@400;700&family=Work+Sans:wght@100;200;300;400;500;600;700;800&display=swap"
         rel="stylesheet">
     <title>marketer4.0</title>
+    <title>marketer4.0</title>
 </head>
 
 <body>
